# customer-risk-recovery-copilot

./: .gitignore  LICENSE  README.md  github-upload-test.txt
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: approvals.py  architecture.py  cases.py  data.py  evals.py  optimization.py  overview.py  portfolio.py  runs.py  simulations.py  triage.py
backend/app/data/: __init__.py  eval_cases.py  mock_store.py
backend/app/mcp_servers/: __init__.py  ar_analytics_server.py  customer_profile_server.py  notes_policy_server.py
backend/app/schemas/: __init__.py  approvals.py  architecture.py  cases.py  common.py  data.py  evals.py  optimization.py  overview.py  portfolio.py  runs.py  simulations.py
backend/app/services/: approval_workflow.py  architecture_view.py  case_payloads.py  case_review.py  data_explorer.py  eval_results.py  mcp_client.py  optimization_results.py  run_traces.py  runtime_state.py  simulation_review.py
backend/app/workflows/: __init__.py  approval_resume_graph.py  case_review_graph.py
backend/eval-results/: case-review-gpt54mini-qa-20260328.json  case-review-model-comparison-strict.json  case-review-model-comparison.json  gpt54mini-repeatability.json  gpt54mini-smoke.json
backend/scripts/: evaluate_case_review.py
data/: README.md
docs/: README.md  completion-checklist.md  data-model-and-demo-cases.md  implementation-readiness-audit.md  langgraph-learning.md  langsmith-integration.md  mcp-learning.md  model-evaluation.md  operational-strategy.md  (+9 more)
(+30 files in other folders)
