[project]
name = "customer-risk-recovery-copilot-backend"
version = "0.1.0"
description = "FastAPI backend for Customer Risk & Recovery Copilot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.1",
  "litellm>=1.79.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
